kubernetes/test.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2019-01-05T10:07:15Z"
  generation: 3
  labels:
    run: nginx
  name: nginx
  namespace: default
  resourceVersion: "116937"
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/nginx
  uid: ad5d188d-10d1-11e9-87da-08002734b65a
spec:
  progressDeadlineSeconds: 600
  replicas: 8
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      run: nginx
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: nginx
    spec:
      containers:
      - image: nginx:1.7.12
        imagePullPolicy: IfNotPresent
        name: nginx
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 5
  conditions:
  - lastTransitionTime: "2019-01-05T10:07:15Z"
    lastUpdateTime: "2019-01-05T10:09:55Z"
    message: ReplicaSet "nginx-6c847f87d9" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2019-01-05T10:10:13Z"
    lastUpdateTime: "2019-01-05T10:10:13Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 3
  readyReplicas: 5
  replicas: 5
  updatedReplicas: 5
